# dm2023

./: DM2023-Lab1-Master.ipynb  pyproject.toml  requirements.txt
Homework/: DM2023-Lab1-Homework.ipynb
helpers/: data_mining_helpers.py
