[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dm2023"
version = "0.0.1"
description = ""
dependencies = [
    "nltk ==3.8.1",
    "seaborn ==0.13.0",
    "scikit-learn ==1.3.1",
    "jupyter ==1.0.0",
    "numpy ==1.26.0",
    "matplotlib ==3.8.0",
    "plotly ==5.17.0",
    "pandas ==2.1.1",
    "chart-studio ==1.1.0",
]
